yaml 파일/3) ingress yaml 파일/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mainweb-svc
            port:
              number: 80
      - pathType: Prefix
        path: /login
        backend:
          service:
            name: loginweb-svc
            port:
              number: 80
      - pathType: Prefix
        path: /board
        backend:
          service:
            name: boardweb-svc
            port:
              number: 80
